# running-analysis

./: .env.example  .gitignore  .mcp.json  Makefile  README.md  drizzle.config.ts  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.claude/: settings.json
.claude/agents/: memory-observer.md  training-planner.md
app/: globals.css  layout.tsx  page.tsx
app/memory/: page.tsx
app/traces/: page.tsx
coach/: __init__.py  cli.py  config.py  db.py  plan_loader.py  strava_sync.py
coach/agent/: __init__.py
coach/analytics/: __init__.py  flags.py  metrics.py  weekly.py
coach/plans/: __init__.py  higdon_intermediate_2.yaml
components/: chat-panel.tsx  memory-editor.tsx
components/dev/: import-run-panel.tsx  sync-strava-button.tsx
dashboard/: package.json  tailwind.config.ts  tsconfig.check.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: ClientChartFrame.tsx  CoachWatching.tsx  HrTrendChart.tsx  LongRunProgressChart.tsx  PaceProgressChart.tsx  (+6 more)
data/: plan.yaml  profile.json  profile.json.example  runs.jsonl.example  strava_state.json.example
evals/: coach.eval.ts  failure_log.md  memory.eval.ts  observer.eval.ts  planner.eval.ts  runner.ts  test_coach_recap.py  test_metrics.py
lib/: dates.ts  dev-store.ts  repository.ts
mcp_server/: server.py
public/: manifest.webmanifest  sw.js
scripts/: coach
tests/: plan.test.ts  strava-client.test.ts  strava-sync.test.ts  test_cli.py  test_db.py  test_flags.py  test_plan_loader.py  test_strava_sync.py  webhook.test.ts
(+47 files in other folders)
