[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strava-coach"
version = "0.1.0"
description = "Personal running coach with deterministic analytics, evals, and agent-ready context."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.49.0",
  "mcp>=1.6.0",
  "pandas>=2.2.0",
  "pydantic>=2.10.0",
  "pyyaml>=6.0.2",
  "stravalib>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[project.scripts]
coach = "coach.cli:main"

[tool.setuptools.packages.find]
include = ["coach*", "mcp_server*"]

[tool.setuptools.package-data]
"coach.plans" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
